// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary correctly with 1 expense 1`] = `
<div>
  <h3>
    Viewing 
    1
     
    expense
     totaling
    $2.35
     
  </h3>
</div>
`;

exports[`should render ExpensesSummary correctly with multiple expenses 1`] = `
<div>
  <h3>
    Viewing 
    23
     
    expenses
     totaling
    $122,135,468.75
     
  </h3>
</div>
`;
